--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -4179,3 +4179,44 @@ code::after { content:'>'; }
     margin: 15px;
     background-color: #fbfbfb;
 }
+
+.vertical-divider {
+    position: absolute;
+    display: table;
+    text-align: center;
+    height: 100%;
+    min-height: 100%;
+    width: 90%;
+}
+.vertical-divider .center-element {
+
+}
+.vertical-divider .center-element:before,
+.vertical-divider .center-element:after {
+    position: absolute;
+    content: "";
+    width: 1px;
+    left: 50%;
+    border-left: 1px solid #e0e0e0;
+}
+.vertical-divider .center-element:before {
+    bottom: 50%;
+    top: 0;
+    margin-bottom: 20px;
+}
+.vertical-divider .center-element:after {
+    top: 50%;
+    bottom: 0;
+    margin-top: 20px;
+}
+
+#circle {
+    margin-top: 60%;
+    background: #FBFBFB;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    z-index: 999999;
+    border: 1px solid #e0e0e0;
+
+}
