--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -4175,3 +4175,96 @@ code::after { content:'>'; }
 
 }
 
+/* section update password */
+html {
+    box-sizing: border-box;
+    font-size: 62.5%; /** Reset para REMS - 62.5% = 10px de 16px **/
+}
+body {
+    font-size: 1.6rem;
+    line-height: 2;
+}
+.formateo{
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.contenedor_password{
+   
+    width: 100%;
+}
+.titulos{
+    font-size: 1.8rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+.contenedor_update{
+width: 90%;
+max-width: 120rem; /** = 1200px; **/
+margin: 0 auto;
+box-shadow: 0px 0px 10px -8px rgba(0,0,0,0.96);
+padding: 2.3rem;
+display: flex;
+flex-direction: row;
+align-items: center;
+flex-wrap: wrap;
+}
+.formulario_update{
+flex: 0 0 50%;
+padding-right: 30px;
+border-right: 1px solid rgba(0,0,0,0.2);
+}
+.instrucciones_update{
+flex: 0 0 50%;
+padding-left: 15px;
+}
+.instrucciones_update p{
+    font-size: 1.3rem;
+}
+.contenedor_campos{
+    margin-bottom: 1rem;
+}
+.label_campo{
+    font-size: 1.4rem;
+}
+.texto_campo{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid rgba(0,0,0,0.3);
+    background-color: transparent;
+}
+.enviar_update{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100%;
+}
+.button{
+    display: inline-block;
+    border: 1px solid green;
+    color: green;
+    background-color: transparent;
+    padding:.6rem 2.4rem;
+    font-size: 1.4rem;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+.verde{
+    color: green;
+}
+.red{
+    color: red;
+    font-size: 1.3rem;
+}
+.verde{
+    color: green;
+    font-size: 1.3rem;
+}
+.validacion_cap{
+    color: red;
+    margin: 30px 0;
+    display: inline-block;
+    font-size: 12px;
+}
