--- a/public/global.css
+++ b/public/global.css
@@ -64,3 +64,31 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+/*cuenta regresiva*/
+div.cuenta-regresiva ul li{
+	text-transform: uppercase;
+	font-size: 1.6rem !important;
+	text-align: center;
+	list-style: none;
+	width: 50%;
+	float: left;
+}
+@media only screen and (min-width:768px){
+	div.cuenta-regresiva ul li{
+		width: 25%;
+		float: left;
+	}
+}
+.clearfix:after {
+    clear: both;
+}
+.seccionr{
+	text-align: center;
+	margin-bottom: 50px;
+}
+.numero{
+	color: #7FEE7B;
+	font-size: 3rem;
+	font-weight: 600;
+	
+}
